[project]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Voodles3",email = "voodles10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{ include = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]
